kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: homework
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
