kubernetes-volumes/ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-all
  namespace: homework
spec:
  ingressClassName: nginx
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8000
